update more order list return function from different identities
